--- a/docs/style.css
+++ b/docs/style.css
@@ -203,6 +203,11 @@ header {
     padding-top: 5px;
     padding-bottom: 5px;
     font-weight: normal;
+    text-align: left;
+}
+
+.New li {
+    list-style: disc;
 }
 
 .newcontent {
