--- a/docs/styleMainMobil.css
+++ b/docs/styleMainMobil.css
@@ -59,6 +59,56 @@ header {
     height: 53px;
 }
 
+header a.menuButton {
+    background: black;
+    display: block;
+    color: white;
+    float: right;
+    margin: 18px;
+}
+
+#mobilMenu {
+    display: none;
+    position: fixed;
+    right: 0px;
+    background-color: #333333;
+    top: 53px;
+}
+
+.SimpleButtonActive {
+    background-color: #333333;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    float: left;
+    cursor: pointer;
+    border-left: 3px solid #0a6dbe;
+    width: 200px;
+}
+
+.SimpleButton {
+    background-color: #333333;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    float: left;
+    cursor: pointer;
+    border-left: 3px solid transparent;
+    width: 200px;
+}
+
+.SimpleButton:hover {
+    border-left: 3px solid #0b7dda;
+}
+
+.SimpleButton:active {
+    border-left: 3px solid #0a6dbe;
+}
+
 /*#endregion */
 
 /*#region Sidebar*/
