--- a/docs/styleMainMobil.css
+++ b/docs/styleMainMobil.css
@@ -4,25 +4,6 @@
     box-sizing: border-box;
 }
 
-/*#region Scrollbar*/
-::-webkit-scrollbar {
-    width: 20px;
-}
-
-::-webkit-scrollbar-track {
-    background: #555555;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #868686;
-}
-
-    ::-webkit-scrollbar-thumb:active {
-        background: #79b7ff;
-    }
-
-/*#endregion */
-
 /*#region Box icon*/
 .box {
     width: 32px;
@@ -66,9 +47,14 @@ header a.menuButton {
 #mobilMenu {
     display: none;
     position: fixed;
-    right: 0px;
+    right: 2px;
     background-color: #333333;
     top: 53px;
+    padding: 1px;
+    border-radius: 6px;
+    border-color: #575757;
+    border-style: solid;
+    border-width: 0px 1px 1px 1px;
 }
 
 .SimpleButtonActive {
@@ -79,7 +65,6 @@ header a.menuButton {
     border: none;
     outline: none;
     float: left;
-    cursor: pointer;
     border-left: 3px solid #0a6dbe;
     width: 200px;
 }
@@ -180,17 +165,8 @@ header a.menuButton {
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-    background: #555555;
+    background: black;
     cursor: default;
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -khtml-user-select: none; /* Konqueror HTML */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome and Opera */
-    color: #bebebe;
-
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -198,6 +174,7 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    color: #bebebe;
 }
 
 .MobilMain {
@@ -213,11 +190,14 @@ body {
 }
 
     .MobilMain form {
-        background-color: #474747;
-        box-shadow: #000000 5px 5px;
+        background-color: #313131;
         padding: 5px;
         margin-bottom: 15px;
         width: 100%;
+        border-radius: 6px;
+        border-color: #575757;
+        border-style: solid;
+        border-width: 1px;
     }
 
 /*#endregion */
