--- a/docs/styleNewsUpdater.css
+++ b/docs/styleNewsUpdater.css
@@ -80,7 +80,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-    background: black;
+    background: #616161;
     cursor: default;
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
