--- a/docs/styleNewsUpdater.css
+++ b/docs/styleNewsUpdater.css
@@ -91,6 +91,7 @@ body {
                                   supported by Chrome and Opera */
     overflow: hidden;
     color: #bebebe;
+    width: 284px;
 }
 
 /*#endregion */
