--- a/docs/styleMain.css
+++ b/docs/styleMain.css
@@ -144,7 +144,6 @@ header {
 
 .DownloadButtonOnSidebar {
     width: 100%;
-    padding: 12px;
     border: none;
     border-radius: 4px;
     margin: 5px 0;
@@ -159,32 +158,51 @@ header {
     transition-duration: 0.2s;
 }
 
-.DownloadButtonOnSidebar:hover, .DownloadButtonOnSidebarSmall:hover {
+.DownloadButtonOnSidebar:hover {
     background-color: #39cca0;
     opacity: 1;
 }
 
-.DownloadButtonOnSidebar:active, .DownloadButtonOnSidebarSmall:active {
+.DownloadButtonOnSidebar:active {
     background-color: #92ecd1;
     opacity: 1;
 }
 
-.DownloadButtonOnSidebarSmall {
-    width: 95%;
-    padding: 4px;
-    border: none;
-    border-radius: 4px;
-    margin: 3px 0;
-    opacity: 0.85;
-    display: inline-block;
-    font-size: 17px;
-    line-height: 15px;
+.DownloadButtonOnSidebar a{
+    display: block;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    font-size: 18px;
+    font-family: sans-serif;
     text-decoration: none;
-    background-color: #1dc08f;
     color: white;
-    -webkit-transition-duration: 0.4s;
-    transition-duration: 0.2s;
-}
+    letter-spacing: .5px;
+    text-align: center;
+    position: relative;
+    transition: all .35s;
+  }
+  
+  .DownloadButtonOnSidebar a span{
+    position: relative;
+    z-index: 2;
+  }
+  
+  .DownloadButtonOnSidebar a:after{
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: white;
+    transition: all .35s;
+    opacity: .4;
+  }
+  
+  .DownloadButtonOnSidebar a:hover:after{
+    width: 100%;
+  }
 
 /*#endregion */
 
@@ -202,7 +220,6 @@ header {
 
 .SocialButton {
     width: 100%;
-    padding: 12px;
     border: none;
     border-radius: 4px;
     margin: 5px 0;
@@ -235,6 +252,42 @@ header {
         opacity: 1;
     }
 
+.SocialButton a{
+        display: block;
+        width: 100%;
+        height: 40px;
+        line-height: 40px;
+        font-size: 18px;
+        font-family: sans-serif;
+        text-decoration: none;
+        color: white;
+        letter-spacing: .5px;
+        text-align: center;
+        position: relative;
+        transition: all .35s;
+      }
+      
+    .SocialButton a span{
+        position: relative;
+      z-index: 2;
+      }
+      
+      .SocialButton a:after{
+        position: absolute;
+        content: "";
+        top: 0;
+        left: 0;
+        width: 0;
+        height: 100%;
+        background: white;
+        transition: all .35s;
+        opacity: .4;
+      }
+      
+      .SocialButton a:hover:after{
+        width: 100%;
+      }
+    
 /*#endregion */
 
 /*#endregion */
@@ -253,6 +306,8 @@ body {
     -ms-user-select: none;
     user-select: none;
     color: #bebebe;
+
+    background-image: url("/imgs/Sand.png");
 }
 
 .PcMain {
@@ -287,6 +342,108 @@ body {
     border-color: #575757;
     border-style: solid;
     border-width: 1px;
+}
+
+/*#endregion */
+
+/*#region Slideshow*/
+    
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  width: 100%;
+  margin-top: 25px;
+  margin-bottom: 10px;
+  padding: 1px;
+  border-radius: 6px;
+  border-color: #575757;
+  border-style: solid;
+  border-width: 1px;
+  right: 100;
+}
+
+/* Next & previous buttons */
+.prev {
+    cursor: pointer;
+    position: absolute;
+    top: 300px;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 300px;
+    padding: 16px 16px 16px 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    right: 0;
+    margin-right: 15px;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.2);
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:active, .next:active {
+  background-color: rgba(0,0,0,0.3);
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #5f5f5f;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.3s ease;
+}
+
+.active, .dot:hover {
+  background-color: #a0a0a0;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
 }
 
 /*#endregion */
