--- a/docs/styleNews.css
+++ b/docs/styleNews.css
@@ -71,25 +71,25 @@
 }
 
 .NewElementAdd:before {
-    content: "➕";
+    content: url("./imgs/added.png");
     display: inline-block;
     width: 2em;
     margin-left: -1em;
 }
 .NewElementFix:before {
-    content: "✔️";
+    content: url("./imgs/fixed.png");
     display: inline-block;
     width: 2em;
     margin-left: -1em;
 }
 .NewElementRemove:before {
-    content: "➖";
+    content: url("./imgs/removed.png");
     display: inline-block;
     width: 2em;
     margin-left: -1em;
 }
 .NewElementWarning:before {
-    content: "⚠";
+    content: url("./imgs/warning.png");
     display: inline-block;
     width: 2em;
     margin-left: -1em;
@@ -208,7 +208,6 @@ header {
 
 .DownloadButtonOnSidebar {
     width: 100%;
-    padding: 12px;
     border: none;
     border-radius: 4px;
     margin: 5px 0;
@@ -223,32 +222,51 @@ header {
     transition-duration: 0.2s;
 }
 
-.DownloadButtonOnSidebar:hover, .DownloadButtonOnSidebarSmall:hover {
+.DownloadButtonOnSidebar:hover {
     background-color: #39cca0;
     opacity: 1;
 }
 
-.DownloadButtonOnSidebar:active, .DownloadButtonOnSidebarSmall:active {
+.DownloadButtonOnSidebar:active {
     background-color: #92ecd1;
     opacity: 1;
 }
 
-.DownloadButtonOnSidebarSmall {
-    width: 95%;
-    padding: 4px;
-    border: none;
-    border-radius: 4px;
-    margin: 3px 0;
-    opacity: 0.85;
-    display: inline-block;
-    font-size: 17px;
-    line-height: 15px;
+.DownloadButtonOnSidebar a{
+    display: block;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    font-size: 18px;
+    font-family: sans-serif;
     text-decoration: none;
-    background-color: #1dc08f;
     color: white;
-    -webkit-transition-duration: 0.4s;
-    transition-duration: 0.2s;
-}
+    letter-spacing: .5px;
+    text-align: center;
+    position: relative;
+    transition: all .35s;
+  }
+  
+  .DownloadButtonOnSidebar a span{
+    position: relative;
+    z-index: 2;
+  }
+  
+  .DownloadButtonOnSidebar a:after{
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: white;
+    transition: all .35s;
+    opacity: .4;
+  }
+  
+  .DownloadButtonOnSidebar a:hover:after{
+    width: 100%;
+  }
 
 /*#endregion */
 
