--- a/docs/styles.css
+++ b/docs/styles.css
@@ -9,18 +9,17 @@ body {
 }
 
 table {
-    background: #616161; border: 5px solid #4f4f4f;
+    background: #0000003d;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    border-radius: 8px;
 }
 
 .menuHeader {
     color: #fff;
-    padding: 0px 10px 0px 40px;
-    border-bottom: 5px solid #4f4f4f;
-    background-image: url('imgs/menu.png');
+    padding: 0px 10px 0px 10px;
     image-rendering: pixelated;
     background-size: 256px;
     height: 32px;
@@ -28,49 +27,25 @@ table {
 }
 
 .button {
-    border: 4px solid;
-    border-top-color: #818181;
-    border-left-color: #818181;
-    border-bottom-color: #494949;
-    border-right-color: #494949;
+    background: #0000003d;
     margin: 10px;
-    padding: 2px 7px;
+    padding: 5px 10px 7px 10px;
     font-weight: bold;
     color: #ddd;
     text-align: center;
     text-decoration: none;
     cursor: pointer;
     font-style: normal;
+    min-width: 100px;
+    transition-duration: 200ms;
+}
+
+.button:hover {
+    background: #48484860;
 }
 
 .button:active {
-    border-top-color: #494949;
-    border-left-color: #494949;
-    border-bottom-color: #818181;
-    border-right-color: #818181;
-}
-
-
-.button + .disabled {
-    border: 4px solid;
-    border-top-color: #818181;
-    border-left-color: #818181;
-    border-bottom-color: #494949;
-    border-right-color: #494949;
-    margin: 10px;
-    padding: 2px 7px;
-    font-weight: bold;
-    color: #ddd;
-    text-align: center;
-
-    opacity: 50%;
-}
-
-.button:active + .disabled {
-    border-top-color: #818181;
-    border-left-color: #818181;
-    border-bottom-color: #494949;
-    border-right-color: #494949;
+    background: #C8C8C8a8;
 }
 
 a {
