Some fixes and cleanup

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -70,7 +70,7 @@ a {
     pointer-events: none;
 }
 
-input[type=email], input[type=password] {
+input {
     border: none;
     user-select: none;
     outline: none;
@@ -86,19 +86,20 @@ input[type=email], input[type=password] {
     font-style: normal;
     min-width: 100px;
     transition-duration: 200ms;
+    border: 2px solid #0000;
 }
 
-input[type=email]:hover, input[type=password]:hover,
-input[type=email]:focus, input[type=password]:focus {
+input:hover,
+input:focus {
     background: #484848;
     background: #48484860;
 }
 
-input[type=email]:invalid, input[type=password]:invalid {
+input:invalid {
     border: 2px solid #ff0000 !important;
 }
 
-.panel-menu > p {
+.panel-menu > p, .panel-menu > form {
     max-width: 190px;
     margin: 10px;
 }
@@ -118,4 +119,50 @@ a:active {
 .error-text {
     color: #e42a2a;
     margin: 10px;
+    background: #0000003d;
+    padding: 0px 5px 3px 5px;
 }
+
+.mini-icon {
+    position: relative;
+    top: 3px;
+}
+
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
