Collecting more detailed information for analysis

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -74,7 +74,7 @@ a {
     pointer-events: none;
     opacity: 0;
 }
-.hidden > *, .hidden > * > *, .hidden > * > * > * {
+.hidden * {
     pointer-events: none;
 }
 
